Hide auto backups by default

--- a/index.html
+++ b/index.html
@@ -744,6 +744,10 @@
       </section>
       <section class="settings-section" aria-labelledby="backupHeading">
         <h3 id="backupHeading">Backup &amp; Restore</h3>
+        <div class="form-row">
+          <label for="settingsShowAutoBackups" id="settingsShowAutoBackupsLabel">Show auto backups in project list</label>
+          <input type="checkbox" id="settingsShowAutoBackups" />
+        </div>
         <div class="button-row">
           <button id="backupSettings">Backup</button>
           <input type="file" id="restoreSettingsInput" accept="application/json" hidden />
