Add factory reset workflow to settings

--- a/index.html
+++ b/index.html
@@ -748,6 +748,7 @@
           <button id="backupSettings">Backup</button>
           <input type="file" id="restoreSettingsInput" accept="application/json" hidden />
           <button id="restoreSettings">Restore</button>
+          <button id="factoryResetSettings">Factory Reset</button>
         </div>
       </section>
       <section class="settings-section" aria-labelledby="aboutHeading">
