--- a/index.html
+++ b/index.html
@@ -752,6 +752,7 @@
           <button id="backupSettings">Backup</button>
           <input type="file" id="restoreSettingsInput" accept="application/json" hidden />
           <button id="restoreSettings">Restore</button>
+          <button id="factoryResetButton">Factory reset</button>
         </div>
       </section>
       <section class="settings-section" aria-labelledby="aboutHeading">
