Remove manual gear list save button

--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
                 </ul>
               </li>
               <li>The resulting gear list appears in printable overviews and shared project files so collaborators see full context.</li>
-              <li>The <strong>Save Gear List</strong> button stores the current list with the project; <strong>Export</strong> downloads a JSON file, <strong>Import</strong> restores it and <strong>Delete</strong> removes the saved list and shows the generator again.</li>
+              <li>Gear lists save automatically with the project; <strong>Export</strong> downloads a JSON file, <strong>Import</strong> restores it and <strong>Delete</strong> removes the saved list and shows the generator again.</li>
               <li>Gear list forms use fork buttons to duplicate your entries instantly, making alternate configurations easy to explore.</li>
             </ul>
           </section>
