Move generation buttons to end of Manage Project section

--- a/index.html
+++ b/index.html
@@ -111,8 +111,6 @@
     <div class="form-row form-row-actions" role="group" aria-label="Project actions">
       <span class="form-label-spacer" aria-hidden="true"></span>
       <div class="form-actions">
-        <button id="generateOverviewBtn">Generate Overview</button>
-        <button id="generateGearListBtn" type="button">Generate Gear List and Project Requirements</button>
         <button id="shareSetupBtn">Share Project</button>
       </div>
     </div>
@@ -125,6 +123,13 @@
     <div class="form-row form-row-actions">
       <span class="form-label-spacer" aria-hidden="true"></span>
       <button id="clearSetupBtn">Clear Current Project</button>
+    </div>
+    <div class="form-row form-row-actions" role="group" aria-label="Project exports">
+      <span class="form-label-spacer" aria-hidden="true"></span>
+      <div class="form-actions">
+        <button id="generateOverviewBtn">Generate Overview</button>
+        <button id="generateGearListBtn" type="button">Generate Gear List and Project Requirements</button>
+      </div>
     </div>
   </section>
 
