Add project rename control

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
           <option value="">-- New Project --</option>
         </select>
       </div>
+      <button id="renameSetupBtn">
+        <span class="btn-icon" aria-hidden="true">✏️</span>Rename
+      </button>
       <button id="deleteSetupBtn" title="Delete selected project">
         <span class="btn-icon" aria-hidden="true">🗑️</span>Delete
       </button>
