--- a/index.html
+++ b/index.html
@@ -777,6 +777,10 @@
         <button id="helpSearchClear" type="button" aria-label="Clear search" title="Clear search" hidden>&times;</button>
       </div>
       <button id="hoverHelpButton" type="button">Hover for help</button>
+      <nav id="helpQuickLinks" aria-label="Help topics" hidden>
+        <h3 id="helpQuickLinksHeading">Jump to a topic</h3>
+        <ul id="helpQuickLinksList"></ul>
+      </nav>
       <p id="helpNoResults" aria-live="polite" hidden>No results found.</p>
       <div id="helpSections">
         <section
