--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
   <nav id="sideMenu" class="side-menu" aria-label="Sidebar navigation" hidden>
     <div class="sidebar-controls"></div>
     <ul>
-      <li><a href="#setup-manager">Manage Project</a></li>
-      <li><a href="#setup-config">Device Selection</a></li>
-      <li><a href="#results">Results</a></li>
-      <li><a href="#setupDiagram">Setup Diagram</a></li>
-      <li><a href="#device-manager">Device Manager</a></li>
+      <li><a href="#setup-manager" data-nav-key="setupManageHeading">Project Overview</a></li>
+      <li><a href="#setup-config" data-nav-key="deviceSelectionHeading">Configure Devices</a></li>
+      <li><a href="#results" data-nav-key="resultsHeading">Power Summary</a></li>
+      <li><a href="#setupDiagram" data-nav-key="setupDiagramHeading">Connection Diagram</a></li>
+      <li><a href="#device-manager" data-nav-key="deviceManagerHeading">Device Library</a></li>
     </ul>
   </nav>
   <div id="menuOverlay" class="hidden"></div>
@@ -91,7 +91,7 @@
   <p id="tagline">Plan your film rig and calculate power consumption &amp; battery life.</p>
 
   <section id="setup-manager">
-    <h2 id="setupManageHeading">Manage Project</h2>
+    <h2 id="setupManageHeading">Project Overview</h2>
     <div class="form-row">
       <label for="setupSelect" id="savedSetupsLabel">Saved Projects:</label>
       <div class="select-wrapper">
@@ -134,7 +134,7 @@
   </section>
 
   <section id="setup-config">
-    <h2 id="deviceSelectionHeading">Device Selection</h2>
+    <h2 id="deviceSelectionHeading">Configure Devices</h2>
       <div class="form-row">
         <label for="cameraSelect" id="cameraLabel">Camera:</label>
         <div class="select-wrapper">
@@ -223,7 +223,7 @@
   </section>
 
   <section id="results">
-    <h2 id="resultsHeading">Results</h2>
+    <h2 id="resultsHeading">Power Summary</h2>
     <ul id="breakdownList">
       <!-- Device breakdown will be inserted here by script.js -->
     </ul>
@@ -248,7 +248,7 @@
   </section>
 
   <section id="setupDiagram">
-    <h2 id="setupDiagramHeading">Project Diagram</h2>
+    <h2 id="setupDiagramHeading">Connection Diagram</h2>
     <p id="compatWarning" role="status" aria-live="polite"></p>
     <p id="diagramDesc" class="visually-hidden">Visual representation of connected devices.</p>
     <div id="diagramArea" role="img" aria-label="Project diagram" aria-describedby="diagramDesc">
@@ -278,7 +278,7 @@
   <button id="toggleDeviceManager" aria-controls="device-manager" aria-expanded="false">Edit Device Data…</button>
 
   <section id="device-manager" class="hidden">
-    <h2 id="deviceManagerHeading">Manage Device Database</h2>
+    <h2 id="deviceManagerHeading">Device Library</h2>
     <div class="button-group"> <!-- Changed from form-row to a generic div for button grouping -->
 <h3 id="addDeviceHeading">Add New Device</h3>
     <div class="form-row">
