Add data transparency summary in settings

--- a/index.html
+++ b/index.html
@@ -756,6 +756,17 @@
           <button id="factoryResetButton">Factory reset</button>
         </div>
       </section>
+      <section class="settings-section" aria-labelledby="dataHeading">
+        <h3 id="dataHeading">Data &amp; Storage</h3>
+        <p id="storageSummaryIntro" class="storage-summary-note">
+          Everything below stays on this device.
+        </p>
+        <ul id="storageSummaryList" class="storage-summary" aria-live="polite"></ul>
+        <p id="storageSummaryEmpty" class="storage-summary-note" hidden>No planner data stored yet.</p>
+        <p id="storageSummaryFootnote" class="storage-summary-note">
+          Backups export each entry as human-readable JSON.
+        </p>
+      </section>
       <section class="settings-section" aria-labelledby="aboutHeading">
         <h3 id="aboutHeading">About &amp; Support</h3>
         <p id="aboutVersion">Version 1.0.1</p>
