--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <a href="#mainContent" class="skip-link" id="skipLink">Skip to content</a>
   <div id="offlineIndicator" role="status" aria-live="polite">Offline</div>
   <header id="topBar">
-    <div class="branding">
+    <a class="branding" href="index.html">
       <svg id="logo" viewBox="0 0 1024 1024" aria-hidden="true">
         <defs>
           <style>
@@ -49,7 +49,7 @@
         <path class="cls-1" d="M315.35,332.35c37.9-37.85,92.98,25.3,49.14,57.64-36.82,27.17-81.35-25.48-49.14-57.64Z" />
       </svg>
       <h1 id="mainTitle">Cine Power Planner</h1>
-    </div>
+    </a>
     <button id="menuToggle" aria-label="Menu" aria-expanded="false">☰</button>
     <div class="feature-search">
       <div id="featureSearchContainer">
