Add multilingual legal pages and update privacy policy

--- a/index.html
+++ b/index.html
@@ -675,9 +675,9 @@
   </main>
 
   <footer id="siteFooter">
-    <a id="impressumLink" href="impressum.html">Impressum</a>
+    <a id="impressumLink" href="impressum-en.html">Imprint</a>
     |
-    <a id="privacyLink" href="datenschutz.html">Datenschutz</a>
+    <a id="privacyLink" href="datenschutz-en.html">Privacy Policy</a>
   </footer>
 
   <div id="settingsDialog" role="dialog" aria-modal="true" aria-labelledby="settingsTitle" hidden>
