--- a/datenschutz.html
+++ b/datenschutz.html
@@ -45,33 +45,39 @@
   </header>
   <main id="mainContent" class="legal-content" tabindex="-1">
     <h1>Datenschutzerklärung</h1>
+    <nav class="legal-language-nav" aria-label="Sprachauswahl">
+      <ul>
+        <li><a href="datenschutz.html" lang="de" aria-current="page">Deutsch</a></li>
+        <li><a href="datenschutz-en.html" lang="en">English</a></li>
+        <li><a href="datenschutz-es.html" lang="es">Español</a></li>
+        <li><a href="datenschutz-fr.html" lang="fr">Français</a></li>
+        <li><a href="datenschutz-it.html" lang="it">Italiano</a></li>
+      </ul>
+    </nav>
     <div class="legal-card">
       <h2>Verantwortliche Stelle</h2>
-      <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 München<br>E-Mail: <a href="mailto:info@lucazanner.com">info@lucazanner.com</a></p>
-      <h2>Erhebung und Speicherung personenbezogener Daten sowie Art und Zweck von deren Verwendung</h2>
-      <p><strong>Beim Besuch der Website:</strong> Der Provider dieser Seite erhebt und speichert automatisch Informationen in sogenannten Server-Log-Dateien, die Ihr Browser automatisch übermittelt (z. B. IP-Adresse, Datum und Uhrzeit der Anfrage, Referrer-URL, verwendeter Browser). Diese Daten dienen ausschließlich zur Gewährleistung eines störungsfreien Betriebs und zur Verbesserung des Angebots. Eine Zuordnung zu bestimmten Personen findet nicht statt.</p>
-      <p><strong>Bei Kontaktaufnahme per E-Mail:</strong> Die von Ihnen übermittelten personenbezogenen Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage verwendet.</p>
-      <h2>Weitergabe von Daten</h2>
-      <p>Eine Übermittlung Ihrer persönlichen Daten an Dritte zu anderen als den im Folgenden aufgeführten Zwecken findet nicht statt. Wir geben Ihre persönlichen Daten nur an Dritte weiter, wenn:</p>
-      <ul>
-        <li>Sie Ihre ausdrückliche Einwilligung dazu erteilt haben,</li>
-        <li>die Verarbeitung zur Abwicklung eines Vertrags erforderlich ist,</li>
-        <li>die Verarbeitung zur Erfüllung einer rechtlichen Verpflichtung erforderlich ist.</li>
-      </ul>
-      <h2>Cookies</h2>
-      <p>Diese Website verwendet Cookies. Cookies richten auf Ihrem Rechner keinen Schaden an und enthalten keine Viren. Sie dienen dazu, unser Angebot nutzerfreundlicher, effektiver und sicherer zu machen. Die meisten der von uns verwendeten Cookies sind „Session-Cookies“, die nach Ende Ihres Besuchs automatisch gelöscht werden. Sie können Ihren Browser so einstellen, dass Sie über das Setzen von Cookies informiert werden und Cookies nur im Einzelfall erlauben.</p>
+      <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 München<br>Deutschland<br>E-Mail: <a href="mailto:info@lucazanner.com">info@lucazanner.com</a></p>
+      <h2>Allgemeine Hinweise</h2>
+      <p>Wir nehmen den Schutz Ihrer personenbezogenen Daten sehr ernst. Diese Anwendung ist als rein clientseitige Web-App konzipiert und verarbeitet nur diejenigen Daten, die für den Betrieb technisch erforderlich sind. Es findet keine Profilbildung, kein Tracking und keine Weitergabe zu Werbezwecken statt.</p>
+      <h2>Server-Logdateien</h2>
+      <p>Beim Aufruf der Website werden technisch notwendige Daten automatisch in Server-Logdateien gespeichert (z.&nbsp;B. IP-Adresse in gekürzter Form, Datum und Uhrzeit, angeforderte Ressource, User-Agent). Die Verarbeitung erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO, um den sicheren Betrieb der Website zu gewährleisten. Die Logdaten werden nicht mit anderen Datenquellen zusammengeführt und in der Regel nach kurzer Zeit automatisch gelöscht.</p>
+      <h2>Kontaktaufnahme</h2>
+      <p>Wenn Sie uns per E-Mail kontaktieren, verarbeiten wir die von Ihnen übermittelten Angaben ausschließlich zur Bearbeitung Ihres Anliegens. Die Verarbeitung beruht auf Art. 6 Abs. 1 lit. b DSGVO, sofern es um vorvertragliche Maßnahmen oder Vertragsabwicklung geht, und ansonsten auf Art. 6 Abs. 1 lit. f DSGVO aufgrund unseres berechtigten Interesses an der Beantwortung von Anfragen. Die Daten werden gelöscht, sobald sie für die Bearbeitung nicht mehr erforderlich sind und keine gesetzlichen Aufbewahrungspflichten bestehen.</p>
+      <h2>Lokale Speicherung &amp; Offline-Funktionen</h2>
+      <p>Die Anwendung speichert Projekt- und Einstellungsdaten ausschließlich lokal auf Ihrem Endgerät (z.&nbsp;B. im Local Storage des Browsers sowie im Service-Worker-Cache) und übermittelt diese nicht an uns. Diese Speicherung ist erforderlich, um von Ihnen eingegebene Konfigurationen zwischenzuspeichern, eine Offline-Nutzung zu ermöglichen und das Nutzererlebnis zu verbessern. Rechtsgrundlage ist Art. 6 Abs. 1 lit. b DSGVO in Verbindung mit § 25 Abs. 2 Nr. 2 TTDSG, da die Speicherung für die Bereitstellung der von Ihnen gewünschten Funktionen technisch notwendig ist. Sie können die lokal gespeicherten Daten jederzeit in den Einstellungen der App oder über Ihren Browser löschen.</p>
+      <h2>Empfänger von Daten</h2>
+      <p>Eine Übermittlung personenbezogener Daten an Dritte erfolgt nur, wenn dies zur Erfüllung gesetzlicher Pflichten erforderlich ist oder wenn wir Dienstleister einsetzen, die personenbezogene Daten in unserem Auftrag verarbeiten (z.&nbsp;B. Hosting- oder E-Mail-Dienstleister). Diese Dienstleister sind vertraglich zur Einhaltung der Datenschutzvorschriften verpflichtet.</p>
+      <h2>Rechtsgrundlagen der Verarbeitung</h2>
+      <p>Sofern wir zur Verarbeitung personenbezogener Daten Ihre Einwilligung einholen, dient Art. 6 Abs. 1 lit. a DSGVO als Rechtsgrundlage. Bei der Verarbeitung personenbezogener Daten, die zur Erfüllung eines Vertrags oder vorvertraglicher Maßnahmen erforderlich ist, beruht die Verarbeitung auf Art. 6 Abs. 1 lit. b DSGVO. Soweit die Verarbeitung zur Wahrung unserer berechtigten Interessen erforderlich ist, erfolgt sie auf Basis von Art. 6 Abs. 1 lit. f DSGVO.</p>
+      <h2>Speicherdauer</h2>
+      <p>Wir speichern personenbezogene Daten nur so lange, wie dies für die genannten Zwecke erforderlich ist oder wie es gesetzliche Aufbewahrungspflichten vorsehen. Danach werden die Daten gelöscht oder gesperrt.</p>
       <h2>Betroffenenrechte</h2>
-      <p>Sie haben das Recht:</p>
-      <ul>
-        <li>gemäß Art. 15 DSGVO Auskunft über Ihre von uns verarbeiteten personenbezogenen Daten zu verlangen,</li>
-        <li>gemäß Art. 16 DSGVO die Berichtigung unrichtiger oder Vervollständigung Ihrer bei uns gespeicherten personenbezogenen Daten zu verlangen,</li>
-        <li>gemäß Art. 17 DSGVO die Löschung Ihrer bei uns gespeicherten personenbezogenen Daten zu verlangen, sofern nicht gesetzliche Verpflichtungen entgegenstehen,</li>
-        <li>gemäß Art. 18 DSGVO die Einschränkung der Verarbeitung Ihrer personenbezogenen Daten zu verlangen,</li>
-        <li>gemäß Art. 20 DSGVO Ihre personenbezogenen Daten in einem strukturierten, gängigen und maschinenlesbaren Format zu erhalten oder die Übermittlung an einen anderen Verantwortlichen zu verlangen.</li>
-      </ul>
-      <h2>Beschwerderecht bei der zuständigen Aufsichtsbehörde</h2>
-      <p>Im Falle datenschutzrechtlicher Verstöße steht Ihnen ein Beschwerderecht bei einer Aufsichtsbehörde zu. Zuständige Aufsichtsbehörde ist der Landesdatenschutzbeauftragte des Bundeslandes, in dem unser Unternehmen seinen Sitz hat.</p>
-      <p>Diese Datenschutzerklärung ist ein allgemeines Muster und ersetzt keine individuelle Rechtsberatung.</p>
+      <p>Sie haben im Rahmen der geltenden gesetzlichen Bestimmungen jederzeit das Recht auf unentgeltliche Auskunft über Ihre gespeicherten personenbezogenen Daten (Art. 15 DSGVO), deren Herkunft und Empfänger sowie den Zweck der Datenverarbeitung. Außerdem haben Sie gegebenenfalls ein Recht auf Berichtigung (Art. 16 DSGVO), Löschung (Art. 17 DSGVO), Einschränkung der Verarbeitung (Art. 18 DSGVO) sowie auf Datenübertragbarkeit (Art. 20 DSGVO). Soweit wir die Verarbeitung auf Art. 6 Abs. 1 lit. e oder f DSGVO stützen, steht Ihnen das Recht zum Widerspruch gemäß Art. 21 DSGVO zu.</p>
+      <h2>Beschwerderecht</h2>
+      <p>Sie haben das Recht, sich bei einer Datenschutzaufsichtsbehörde zu beschweren, insbesondere in dem Mitgliedstaat Ihres Aufenthaltsorts, Ihres Arbeitsplatzes oder des Orts des mutmaßlichen Verstoßes. Für Bayern ist dies insbesondere das Bayerische Landesamt für Datenschutzaufsicht (BayLDA), Promenade 27, 91522 Ansbach.</p>
+      <h2>Aktualität dieser Datenschutzerklärung</h2>
+      <p>Wir behalten uns vor, diese Datenschutzerklärung bei Bedarf anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht oder um Änderungen unserer Leistungen in der Erklärung umzusetzen. Die jeweils aktuelle Version finden Sie jederzeit auf dieser Seite.</p>
+      <p><strong>Stand:</strong> März 2025</p>
     </div>
   </main>
   <footer id="siteFooter">
