--- a/impressum-es.html
+++ b/impressum-es.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self'; img-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self'; manifest-src 'self'; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none';" />
   <meta name="referrer" content="no-referrer" />
   <meta name="theme-color" content="#f9f9f9" />
-  <title>Impressum</title>
+  <title>Aviso legal</title>
   <link rel="icon" href="icon.svg" type="image/svg+xml" />
   <link rel="icon" href="icon.png" type="image/png" />
   <link rel="apple-touch-icon" href="icon.png" />
@@ -15,8 +15,8 @@
   <script src="static-theme.js" defer></script>
 </head>
 <body class="static-page">
-  <a href="#mainContent" class="skip-link">Zum Inhalt springen</a>
-  <div id="offlineIndicator" role="status" aria-live="polite">Offline</div>
+  <a href="#mainContent" class="skip-link">Saltar al contenido</a>
+  <div id="offlineIndicator" role="status" aria-live="polite">Sin conexión</div>
   <header id="topBar">
     <div class="branding">
       <svg id="logo" viewBox="0 0 1024 1024" aria-hidden="true">
@@ -39,43 +39,43 @@
       </svg>
       <h1 id="mainTitle">Cine Power Planner</h1>
     </div>
-    <nav class="static-nav" aria-label="Sekundärnavigation">
-      <a class="button-link" href="index.html">Zurück zur App</a>
+    <nav class="static-nav" aria-label="Navegación secundaria">
+      <a class="button-link" href="index.html">Volver a la aplicación</a>
     </nav>
   </header>
   <main id="mainContent" class="legal-content" tabindex="-1">
-    <h1>Impressum</h1>
-    <nav class="legal-language-nav" aria-label="Sprachauswahl">
+    <h1>Aviso legal</h1>
+    <nav class="legal-language-nav" aria-label="Selección de idioma">
       <ul>
-        <li><a href="impressum.html" lang="de" aria-current="page">Deutsch</a></li>
+        <li><a href="impressum.html" lang="de">Deutsch</a></li>
         <li><a href="impressum-en.html" lang="en">English</a></li>
-        <li><a href="impressum-es.html" lang="es">Español</a></li>
+        <li><a href="impressum-es.html" lang="es" aria-current="page">Español</a></li>
         <li><a href="impressum-fr.html" lang="fr">Français</a></li>
         <li><a href="impressum-it.html" lang="it">Italiano</a></li>
       </ul>
     </nav>
     <div class="legal-card">
-      <h2>Angaben gemäß § 5 TMG</h2>
-      <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 München<br>Deutschland</p>
-      <h2>Kontakt</h2>
-      <p>E-Mail: <a href="mailto:info@lucazanner.com">info@lucazanner.com</a></p>
-      <h2>Verantwortlich für den Inhalt nach § 18 Abs. 2 MStV</h2>
-      <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 München</p>
-      <h2>Haftung für Inhalte</h2>
-      <p>Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
-      <h2>Haftung für Links</h2>
-      <p>Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
-      <h2>Urheberrecht</h2>
-      <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechts bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet und entsprechende Inhalte als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
-      <h2>Streitschlichtung</h2>
-      <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a href="https://ec.europa.eu/consumers/odr" rel="noopener" target="_blank">https://ec.europa.eu/consumers/odr</a>. Unsere E-Mail-Adresse finden Sie oben im Impressum.</p>
-      <p>Wir sind weder verpflichtet noch bereit, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p>
+      <h2>Información según el § 5 de la Ley alemana de Telemedios (TMG)</h2>
+      <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 Múnich<br>Alemania</p>
+      <h2>Contacto</h2>
+      <p>Correo electrónico: <a href="mailto:info@lucazanner.com">info@lucazanner.com</a></p>
+      <h2>Responsable del contenido editorial según el art. 18 apdo. 2 del Tratado Estatal de Medios (MStV)</h2>
+      <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 Múnich</p>
+      <h2>Responsabilidad por los contenidos</h2>
+      <p>Como proveedores de servicios somos responsables de nuestros propios contenidos en estas páginas de conformidad con el § 7 apdo. 1 TMG y las leyes generales. Sin embargo, según los §§ 8 a 10 TMG no estamos obligados a supervisar la información de terceros transmitida o almacenada ni a investigar circunstancias que indiquen una actividad ilícita. Las obligaciones de eliminar o bloquear el uso de información en virtud de las leyes generales permanecen inalteradas. La responsabilidad en este sentido solo es posible a partir del momento en que tengamos conocimiento de una infracción concreta. Si tenemos conocimiento de infracciones, eliminaremos los contenidos de inmediato.</p>
+      <h2>Responsabilidad por los enlaces</h2>
+      <p>Nuestra oferta contiene enlaces a sitios web externos de terceros sobre cuyos contenidos no tenemos influencia. Por ello no podemos asumir ninguna responsabilidad por esos contenidos externos. El respectivo proveedor u operador es siempre responsable del contenido de las páginas enlazadas. Las páginas enlazadas se comprobaron en el momento de enlazarlas para detectar posibles infracciones legales; en ese momento no se identificaron contenidos ilegales. Un control permanente de los contenidos de las páginas enlazadas no es razonable sin indicios concretos de una infracción. Si tenemos conocimiento de infracciones, eliminaremos dichos enlaces de inmediato.</p>
+      <h2>Derechos de autor</h2>
+      <p>Los contenidos y obras creados por los operadores del sitio en estas páginas están sujetos a la legislación alemana sobre derechos de autor. La reproducción, tratamiento, distribución o cualquier tipo de explotación fuera de los límites del derecho de autor requieren el consentimiento por escrito del autor o creador correspondiente. Las descargas y copias de esta página solo están permitidas para uso privado y no comercial. Cuando los contenidos de esta página no hayan sido creados por el operador, se respetan los derechos de autor de terceros y dichos contenidos se identifican como tales. Si a pesar de ello tuviera conocimiento de una infracción de derechos de autor, le rogamos que nos lo comunique. En cuanto tengamos conocimiento de infracciones eliminaremos los contenidos de inmediato.</p>
+      <h2>Resolución de litigios</h2>
+      <p>La Comisión Europea ofrece una plataforma para la resolución de litigios en línea (ODR): <a href="https://ec.europa.eu/consumers/odr" rel="noopener" target="_blank">https://ec.europa.eu/consumers/odr</a>. Nuestra dirección de correo electrónico figura en el aviso legal anterior.</p>
+      <p>No estamos obligados ni dispuestos a participar en procedimientos de resolución de litigios ante una junta arbitral de consumo.</p>
     </div>
   </main>
   <footer id="siteFooter">
-    <a href="impressum.html">Impressum</a>
+    <a href="impressum-es.html">Aviso legal</a>
     |
-    <a href="datenschutz.html">Datenschutz</a>
+    <a href="datenschutz-es.html">Política de privacidad</a>
   </footer>
 </body>
 </html>
