Update privacy notices for regional requirements

--- a/datenschutz-fr.html
+++ b/datenschutz-fr.html
@@ -40,12 +40,12 @@
       <h1 id="mainTitle">Cine Power Planner</h1>
     </div>
     <nav class="static-nav" aria-label="Navigation secondaire">
-      <a class="button-link" href="index.html">Retour à l'application</a>
+      <a class="button-link" href="index.html">Retour à l’application</a>
     </nav>
   </header>
   <main id="mainContent" class="legal-content" tabindex="-1">
     <h1>Politique de confidentialité</h1>
-    <nav class="legal-language-nav" aria-label="Choix de la langue">
+    <nav class="legal-language-nav" aria-label="Sélection de la langue">
       <ul>
         <li><a href="datenschutz.html" lang="de">Deutsch</a></li>
         <li><a href="datenschutz-en.html" lang="en">English</a></li>
@@ -56,28 +56,28 @@
     </nav>
     <div class="legal-card">
       <h2>Responsable du traitement</h2>
-      <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 Munich<br>Allemagne<br>E-mail&nbsp;: <a href="mailto:info@lucazanner.com">info@lucazanner.com</a></p>
+      <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 Munich<br>Allemagne<br>E-mail : <a href="mailto:info@lucazanner.com">info@lucazanner.com</a></p>
       <h2>Informations générales</h2>
-      <p>Nous accordons une grande importance à la protection de vos données personnelles. Cette application est conçue comme une application web entièrement côté client et ne traite que les données techniquement nécessaires au fonctionnement du service. Aucune activité de profilage, de suivi ou de transmission à des fins publicitaires n'est effectuée.</p>
+      <p>Nous prenons la protection de vos données personnelles très au sérieux. Cette application est conçue comme une application web purement côté client et ne traite que les données techniquement nécessaires au fonctionnement du service. Aucun profilage, suivi ou transmission de données à des fins publicitaires n’a lieu. Les traitements décrits respectent le Règlement (UE) 2016/679 (RGPD) ainsi que la loi n°&nbsp;78-17 modifiée relative à l’informatique, aux fichiers et aux libertés.</p>
       <h2>Fichiers journaux du serveur</h2>
-      <p>Lors de l'accès au site web, des informations techniquement nécessaires sont automatiquement enregistrées dans des fichiers journaux du serveur (par exemple adresse IP abrégée, date et heure, ressource demandée, user agent). Le traitement repose sur l'article&nbsp;6, paragraphe&nbsp;1, point f) du RGPD afin d'assurer le fonctionnement sécurisé du site. Les données de journal ne sont pas recoupées avec d'autres sources et sont en règle générale supprimées automatiquement après une courte période.</p>
+      <p>Lorsque vous accédez au site web, des informations techniquement nécessaires sont automatiquement enregistrées dans des fichiers journaux du serveur (par exemple adresse IP tronquée, date et heure de la visite, ressource demandée, user agent). Le traitement est fondé sur l’article&nbsp;6, paragraphe&nbsp;1, point&nbsp;f du RGPD afin de garantir le fonctionnement sécurisé du site. Les journaux ne sont pas recoupés avec d’autres sources de données et sont en règle générale supprimés automatiquement au bout d’une courte période.</p>
       <h2>Contact par e-mail</h2>
-      <p>Si vous nous contactez par e-mail, nous traitons les informations fournies uniquement pour répondre à votre demande. Le traitement repose sur l'article&nbsp;6, paragraphe&nbsp;1, point b) du RGPD lorsqu'il est nécessaire pour des mesures précontractuelles ou l'exécution d'un contrat, et sinon sur l'article&nbsp;6, paragraphe&nbsp;1, point f) du RGPD en raison de notre intérêt légitime à répondre aux demandes. Les données sont supprimées dès qu'elles ne sont plus nécessaires et qu'aucune obligation légale de conservation n'existe.</p>
+      <p>Si vous nous contactez par e-mail, nous traitons les informations fournies uniquement pour répondre à votre demande. Le traitement repose sur l’article&nbsp;6, paragraphe&nbsp;1, point&nbsp;b du RGPD lorsqu’il est nécessaire à l’exécution de mesures précontractuelles ou contractuelles, et sinon sur l’article&nbsp;6, paragraphe&nbsp;1, point&nbsp;f du RGPD au titre de notre intérêt légitime à répondre aux demandes. Les données sont supprimées dès qu’elles ne sont plus nécessaires et qu’aucune obligation légale de conservation n’existe.</p>
       <h2>Stockage local et fonctions hors ligne</h2>
-      <p>L'application enregistre les données de projet et les paramètres exclusivement sur votre appareil (par exemple dans le stockage local du navigateur et dans le cache du service worker) et ne les transmet pas à nos serveurs. Ce stockage est nécessaire pour sauvegarder vos configurations, permettre l'utilisation hors ligne et améliorer l'expérience utilisateur. La base juridique est l'article&nbsp;6, paragraphe&nbsp;1, point b) du RGPD combiné au § 25, paragraphe 2, numéro 2 TTDSG, car ce stockage est techniquement indispensable pour fournir les fonctionnalités souhaitées. Vous pouvez supprimer les données stockées localement à tout moment via les paramètres de l'application ou votre navigateur.</p>
+      <p>L’application enregistre les données de projet et les paramètres exclusivement sur votre appareil (par exemple dans le stockage local du navigateur et dans le cache du service worker) et ne nous les transmet pas. Ce stockage est nécessaire pour mémoriser vos configurations, permettre l’utilisation hors ligne et améliorer l’expérience utilisateur. La base juridique est l’article&nbsp;6, paragraphe&nbsp;1, point&nbsp;b du RGPD conjointement avec l’article&nbsp;82 de la loi Informatique et Libertés, le stockage étant techniquement indispensable pour fournir les fonctionnalités demandées. Vous pouvez supprimer à tout moment les données stockées localement via les paramètres de l’application ou de votre navigateur.</p>
       <h2>Destinataires des données</h2>
-      <p>Les données personnelles ne sont transmises à des tiers que lorsque cela est nécessaire pour remplir des obligations légales ou lorsque nous faisons appel à des prestataires de services traitant des données en notre nom (par exemple hébergeurs ou fournisseurs de messagerie). Ces prestataires sont contractuellement tenus de respecter la législation sur la protection des données.</p>
-      <h2>Bases juridiques du traitement</h2>
-      <p>Lorsque nous recueillons votre consentement pour traiter des données personnelles, la base juridique est l'article&nbsp;6, paragraphe&nbsp;1, point a) du RGPD. Si le traitement est nécessaire à l'exécution d'un contrat ou de mesures précontractuelles, l'article&nbsp;6, paragraphe&nbsp;1, point b) du RGPD s'applique. Lorsque le traitement est nécessaire à la sauvegarde de nos intérêts légitimes, il repose sur l'article&nbsp;6, paragraphe&nbsp;1, point f) du RGPD.</p>
+      <p>Vos données personnelles ne sont transmises à des tiers que lorsqu’une obligation légale l’exige ou lorsque nous faisons appel à des prestataires qui traitent les données pour notre compte (par exemple hébergeurs ou fournisseurs de messagerie). Ces prestataires sont contractuellement tenus de respecter les exigences en matière de protection des données.</p>
+      <h2>Bases légales du traitement</h2>
+      <p>Lorsque nous recueillons votre consentement pour traiter des données personnelles, la base juridique est l’article&nbsp;6, paragraphe&nbsp;1, point&nbsp;a du RGPD combiné à l’article&nbsp;7 de la loi Informatique et Libertés. Lorsque le traitement est nécessaire à l’exécution d’un contrat ou de mesures précontractuelles, il repose sur l’article&nbsp;6, paragraphe&nbsp;1, point&nbsp;b du RGPD. Dans la mesure où le traitement est nécessaire pour la poursuite de nos intérêts légitimes, il est fondé sur l’article&nbsp;6, paragraphe&nbsp;1, point&nbsp;f du RGPD.</p>
       <h2>Durée de conservation</h2>
-      <p>Nous conservons les données personnelles uniquement pendant la durée nécessaire aux finalités mentionnées ou conformément aux obligations légales de conservation. Ensuite, les données sont supprimées ou bloquées.</p>
+      <p>Nous conservons les données personnelles uniquement pendant la durée nécessaire aux finalités indiquées ou conformément aux obligations légales de conservation prévues par la législation française et européenne. Passé ce délai, les données sont supprimées ou rendues anonymes.</p>
       <h2>Vos droits</h2>
-      <p>Vous disposez d'un droit d'accès gratuit aux données personnelles vous concernant (article&nbsp;15 RGPD), à leur origine, leurs destinataires et à la finalité du traitement. Vous pouvez également demander, le cas échéant, la rectification (article&nbsp;16 RGPD), l'effacement (article&nbsp;17 RGPD), la limitation du traitement (article&nbsp;18 RGPD) ainsi que la portabilité des données (article&nbsp;20 RGPD). Lorsque nous traitons des données sur la base de l'article&nbsp;6, paragraphe&nbsp;1, points e) ou f) du RGPD, vous disposez d'un droit d'opposition conformément à l'article&nbsp;21 RGPD.</p>
-      <h2>Droit d'introduire une réclamation</h2>
-      <p>Vous avez le droit d'introduire une réclamation auprès d'une autorité de contrôle, en particulier dans l'État membre de votre résidence habituelle, de votre lieu de travail ou du lieu de l'infraction présumée. En Bavière, l'autorité compétente est notamment le Bayerisches Landesamt für Datenschutzaufsicht (BayLDA), Promenade 27, 91522 Ansbach, Allemagne.</p>
-      <h2>Évolution de cette politique</h2>
-      <p>Nous nous réservons le droit d'adapter la présente politique de confidentialité si nécessaire afin de respecter les exigences légales en vigueur ou de refléter des modifications de nos services. La version la plus récente est disponible à tout moment sur cette page.</p>
-      <p><strong>Date d'effet&nbsp;:</strong> mars 2025</p>
+      <p>Vous disposez d’un droit d’accès gratuit aux données personnelles vous concernant (article&nbsp;15 du RGPD), de connaître leur origine, leurs destinataires et la finalité du traitement. Vous avez également le droit de demander la rectification (article&nbsp;16 du RGPD), l’effacement (article&nbsp;17 du RGPD), la limitation du traitement (article&nbsp;18 du RGPD) ainsi que la portabilité des données (article&nbsp;20 du RGPD). Lorsque nous traitons des données sur la base de l’article&nbsp;6, paragraphe&nbsp;1, points&nbsp;e ou f du RGPD, vous pouvez vous y opposer conformément à l’article&nbsp;21 du RGPD.</p>
+      <h2>Droit d’introduire une réclamation</h2>
+      <p>Vous avez le droit d’introduire une réclamation auprès d’une autorité de contrôle, notamment en France auprès de la Commission Nationale de l’Informatique et des Libertés (CNIL), 3 place de Fontenoy, TSA 80715, 75334 Paris Cedex 07, France.</p>
+      <h2>Mise à jour de cette politique</h2>
+      <p>Nous nous réservons le droit d’adapter cette politique de confidentialité si nécessaire pour respecter les exigences légales en vigueur ou refléter des évolutions de nos services. La version la plus récente est accessible à tout moment sur cette page.</p>
+      <p><strong>Date de mise à jour&nbsp;:</strong> mars 2025</p>
     </div>
   </main>
   <footer id="siteFooter">
