--- a/datenschutz-it.html
+++ b/datenschutz-it.html
@@ -40,7 +40,7 @@
       <h1 id="mainTitle">Cine Power Planner</h1>
     </div>
     <nav class="static-nav" aria-label="Navigazione secondaria">
-      <a class="button-link" href="index.html">Torna all'app</a>
+      <a class="button-link" href="index.html">Torna all’app</a>
     </nav>
   </header>
   <main id="mainContent" class="legal-content" tabindex="-1">
@@ -58,26 +58,26 @@
       <h2>Titolare del trattamento</h2>
       <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 Monaco di Baviera<br>Germania<br>E-mail: <a href="mailto:info@lucazanner.com">info@lucazanner.com</a></p>
       <h2>Informazioni generali</h2>
-      <p>Tutela dei dati personali è una priorità per noi. Questa applicazione è progettata come web app puramente client-side e tratta solo i dati tecnicamente necessari al funzionamento del servizio. Non vengono effettuati profilazione, tracciamento o trasferimenti a fini pubblicitari.</p>
+      <p>Tuteliamo con grande attenzione i suoi dati personali. Questa applicazione è progettata come web app esclusivamente lato client e tratta solo i dati tecnicamente necessari al funzionamento del servizio. Non vengono effettuati profilazione, tracciamento né divulgazione di dati per finalità pubblicitarie. I trattamenti descritti sono conformi al Regolamento (UE) 2016/679 (RGPD) e al Decreto Legislativo 196/2003, come modificato dal D.lgs. 101/2018 (Codice in materia di protezione dei dati personali).</p>
       <h2>File di log del server</h2>
-      <p>Quando accede al sito web, vengono memorizzati automaticamente nei file di log del server dati tecnicamente necessari (ad esempio indirizzo IP abbreviato, data e ora, risorsa richiesta, user agent). Il trattamento si basa sull'art. 6 par. 1 lett. f GDPR per garantire il funzionamento sicuro del sito. I dati di log non vengono combinati con altre fonti e, di norma, vengono cancellati automaticamente dopo un breve periodo.</p>
+      <p>Quando accede al sito web, le informazioni tecnicamente necessarie vengono salvate automaticamente nei file di log del server (ad esempio indirizzo IP troncato, data e ora, risorsa richiesta, user agent). Il trattamento avviene ai sensi dell’articolo&nbsp;6, paragrafo&nbsp;1, lettera&nbsp;f del RGPD per garantire il funzionamento sicuro del sito. I dati di log non vengono incrociati con altre fonti e di norma sono eliminati automaticamente dopo un breve periodo.</p>
       <h2>Contatto via e-mail</h2>
-      <p>Se ci contatta via e-mail, tratteremo le informazioni fornite esclusivamente per rispondere alla sua richiesta. Il trattamento si basa sull'art. 6 par. 1 lett. b GDPR quando la richiesta riguarda misure precontrattuali o l'esecuzione di un contratto, e in caso contrario sull'art. 6 par. 1 lett. f GDPR in virtù del nostro legittimo interesse a rispondere alle richieste. I dati vengono cancellati non appena non sono più necessari e non sussistono obblighi legali di conservazione.</p>
-      <h2>Memorizzazione locale e funzioni offline</h2>
-      <p>L'applicazione memorizza dati di progetto e impostazioni esclusivamente sul suo dispositivo (ad esempio nel local storage del browser e nella cache del service worker) e non li trasmette ai nostri server. Questa memorizzazione è necessaria per salvare le configurazioni inserite, consentire l'utilizzo offline e migliorare l'esperienza d'uso. La base giuridica è l'art. 6 par. 1 lett. b GDPR in combinazione con il § 25 par. 2 n. 2 TTDSG, poiché la memorizzazione è tecnicamente indispensabile per fornire le funzionalità richieste. Può cancellare in qualsiasi momento i dati locali tramite le impostazioni dell'app o tramite il browser.</p>
+      <p>Se ci contatta via e-mail, trattiamo le informazioni fornite esclusivamente per gestire la sua richiesta. Il trattamento si basa sull’articolo&nbsp;6, paragrafo&nbsp;1, lettera&nbsp;b del RGPD quando necessario per misure precontrattuali o contrattuali e, in caso contrario, sull’articolo&nbsp;6, paragrafo&nbsp;1, lettera&nbsp;f del RGPD, in virtù del nostro legittimo interesse a rispondere alle richieste. I dati vengono eliminati quando non sono più necessari e non sussistono obblighi legali di conservazione.</p>
+      <h2>Archiviazione locale e funzioni offline</h2>
+      <p>L’app salva i dati di progetto e le impostazioni esclusivamente sul suo dispositivo (ad esempio nello storage locale del browser e nella cache del service worker) senza trasmetterli a noi. Tale archiviazione è necessaria per memorizzare temporaneamente le configurazioni inserite, consentire l’uso offline e migliorare l’esperienza utente. La base giuridica è l’articolo&nbsp;6, paragrafo&nbsp;1, lettera&nbsp;b del RGPD in combinato disposto con l’articolo&nbsp;122 del Codice in materia di protezione dei dati personali, poiché lo storage è tecnicamente indispensabile per fornire le funzionalità richieste. Può cancellare in qualsiasi momento i dati archiviati localmente dalle impostazioni dell’app o del browser.</p>
       <h2>Destinatari dei dati</h2>
-      <p>I dati personali vengono comunicati a terzi solo quando è necessario per adempiere a obblighi di legge o quando utilizziamo fornitori di servizi che trattano dati personali per nostro conto (ad esempio provider di hosting o e-mail). Tali fornitori sono contrattualmente obbligati a rispettare la normativa sulla protezione dei dati.</p>
+      <p>I dati personali vengono comunicati a terzi solo quando ciò è necessario per adempiere a obblighi di legge oppure quando utilizziamo fornitori di servizi che trattano dati personali per nostro conto (ad esempio provider di hosting o di posta elettronica). Tali fornitori sono contrattualmente vincolati al rispetto delle norme sulla protezione dei dati.</p>
       <h2>Basi giuridiche del trattamento</h2>
-      <p>Quando otteniamo il suo consenso al trattamento di dati personali, la base giuridica è l'art. 6 par. 1 lett. a GDPR. Se il trattamento è necessario per l'esecuzione di un contratto o di misure precontrattuali, si applica l'art. 6 par. 1 lett. b GDPR. Qualora il trattamento sia necessario per la tutela dei nostri interessi legittimi, esso si basa sull'art. 6 par. 1 lett. f GDPR.</p>
+      <p>Quando raccogliamo il suo consenso al trattamento dei dati personali, la base giuridica è l’articolo&nbsp;6, paragrafo&nbsp;1, lettera&nbsp;a del RGPD insieme all’articolo&nbsp;2-quinquies del Codice in materia di protezione dei dati personali. Quando il trattamento è necessario per l’esecuzione di un contratto o di misure precontrattuali, si applica l’articolo&nbsp;6, paragrafo&nbsp;1, lettera&nbsp;b del RGPD. Nei casi in cui il trattamento sia necessario per perseguire i nostri legittimi interessi, esso si fonda sull’articolo&nbsp;6, paragrafo&nbsp;1, lettera&nbsp;f del RGPD.</p>
       <h2>Periodo di conservazione</h2>
-      <p>Conserviamo i dati personali solo per il tempo necessario alle finalità indicate o per quanto richiesto dagli obblighi legali di conservazione. Successivamente i dati vengono cancellati o bloccati.</p>
-      <h2>Diritti dell'interessato</h2>
-      <p>Ha il diritto di ottenere gratuitamente informazioni sui dati personali che la riguardano (art. 15 GDPR), sulla loro origine, sui destinatari e sulle finalità del trattamento. Ha inoltre diritto, se del caso, alla rettifica (art. 16 GDPR), alla cancellazione (art. 17 GDPR), alla limitazione del trattamento (art. 18 GDPR) e alla portabilità dei dati (art. 20 GDPR). Quando il trattamento avviene sulla base dell'art. 6 par. 1 lett. e o f GDPR, ha diritto di opposizione ai sensi dell'art. 21 GDPR.</p>
+      <p>Conserviamo i dati personali solo per il tempo necessario a conseguire le finalità indicate o come previsto dagli obblighi di conservazione stabiliti dalla normativa italiana ed europea. Trascorso tale termine, i dati vengono cancellati o resi anonimi.</p>
+      <h2>I suoi diritti</h2>
+      <p>Ai sensi della normativa applicabile, lei ha il diritto di ottenere gratuitamente informazioni sui dati personali trattati che la riguardano (articolo&nbsp;15 RGPD), sulla loro origine, sui destinatari e sulle finalità del trattamento. Ha inoltre diritto alla rettifica (articolo&nbsp;16 RGPD), alla cancellazione (articolo&nbsp;17 RGPD), alla limitazione del trattamento (articolo&nbsp;18 RGPD) e alla portabilità dei dati (articolo&nbsp;20 RGPD). Se trattiamo i dati sulla base dell’articolo&nbsp;6, paragrafo&nbsp;1, lettere&nbsp;e o f del RGPD, può opporsi conformemente all’articolo&nbsp;21 RGPD.</p>
       <h2>Diritto di reclamo</h2>
-      <p>Ha il diritto di proporre reclamo a un'autorità di controllo, in particolare nello Stato membro in cui risiede abitualmente, lavora o nel luogo della presunta violazione. In Baviera l'autorità competente è il Bayerisches Landesamt für Datenschutzaufsicht (BayLDA), Promenade 27, 91522 Ansbach, Germania.</p>
+      <p>Ha il diritto di proporre reclamo a un’autorità di controllo, in particolare in Italia al Garante per la protezione dei dati personali, Piazza Venezia 11, 00187 Roma, Italia.</p>
       <h2>Aggiornamenti della presente informativa</h2>
-      <p>Ci riserviamo il diritto di modificare la presente informativa sulla privacy quando necessario, per garantire il rispetto delle norme vigenti o per riflettere cambiamenti nei nostri servizi. La versione più recente è sempre disponibile su questa pagina.</p>
-      <p><strong>Data di entrata in vigore:</strong> marzo 2025</p>
+      <p>Ci riserviamo il diritto di aggiornare la presente informativa sulla privacy quando necessario per rispettare i requisiti legali vigenti o per riflettere modifiche ai nostri servizi. La versione più recente è sempre disponibile su questa pagina.</p>
+      <p><strong>Data di aggiornamento:</strong> marzo 2025</p>
     </div>
   </main>
   <footer id="siteFooter">
