--- a/datenschutz.html
+++ b/datenschutz.html
@@ -58,7 +58,7 @@
       <h2>Verantwortliche Stelle</h2>
       <p>Luca Zanner<br>Brünnsteinstraße 5<br>81541 München<br>Deutschland<br>E-Mail: <a href="mailto:info@lucazanner.com">info@lucazanner.com</a></p>
       <h2>Allgemeine Hinweise</h2>
-      <p>Wir nehmen den Schutz Ihrer personenbezogenen Daten sehr ernst. Diese Anwendung ist als rein clientseitige Web-App konzipiert und verarbeitet nur diejenigen Daten, die für den Betrieb technisch erforderlich sind. Es findet keine Profilbildung, kein Tracking und keine Weitergabe zu Werbezwecken statt.</p>
+      <p>Wir nehmen den Schutz Ihrer personenbezogenen Daten sehr ernst. Diese Anwendung ist als rein clientseitige Web-App konzipiert und verarbeitet nur diejenigen Daten, die für den Betrieb technisch erforderlich sind. Es findet keine Profilbildung, kein Tracking und keine Weitergabe zu Werbezwecken statt. Die Verarbeitung erfolgt im Einklang mit der Datenschutz-Grundverordnung (DSGVO) sowie dem Bundesdatenschutzgesetz (BDSG).</p>
       <h2>Server-Logdateien</h2>
       <p>Beim Aufruf der Website werden technisch notwendige Daten automatisch in Server-Logdateien gespeichert (z.&nbsp;B. IP-Adresse in gekürzter Form, Datum und Uhrzeit, angeforderte Ressource, User-Agent). Die Verarbeitung erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO, um den sicheren Betrieb der Website zu gewährleisten. Die Logdaten werden nicht mit anderen Datenquellen zusammengeführt und in der Regel nach kurzer Zeit automatisch gelöscht.</p>
       <h2>Kontaktaufnahme</h2>
@@ -68,7 +68,7 @@
       <h2>Empfänger von Daten</h2>
       <p>Eine Übermittlung personenbezogener Daten an Dritte erfolgt nur, wenn dies zur Erfüllung gesetzlicher Pflichten erforderlich ist oder wenn wir Dienstleister einsetzen, die personenbezogene Daten in unserem Auftrag verarbeiten (z.&nbsp;B. Hosting- oder E-Mail-Dienstleister). Diese Dienstleister sind vertraglich zur Einhaltung der Datenschutzvorschriften verpflichtet.</p>
       <h2>Rechtsgrundlagen der Verarbeitung</h2>
-      <p>Sofern wir zur Verarbeitung personenbezogener Daten Ihre Einwilligung einholen, dient Art. 6 Abs. 1 lit. a DSGVO als Rechtsgrundlage. Bei der Verarbeitung personenbezogener Daten, die zur Erfüllung eines Vertrags oder vorvertraglicher Maßnahmen erforderlich ist, beruht die Verarbeitung auf Art. 6 Abs. 1 lit. b DSGVO. Soweit die Verarbeitung zur Wahrung unserer berechtigten Interessen erforderlich ist, erfolgt sie auf Basis von Art. 6 Abs. 1 lit. f DSGVO.</p>
+      <p>Sofern wir zur Verarbeitung personenbezogener Daten Ihre Einwilligung einholen, dient Art. 6 Abs. 1 lit. a DSGVO als Rechtsgrundlage. Bei der Verarbeitung personenbezogener Daten, die zur Erfüllung eines Vertrags oder vorvertraglicher Maßnahmen erforderlich ist, beruht die Verarbeitung auf Art. 6 Abs. 1 lit. b DSGVO. Soweit die Verarbeitung zur Wahrung unserer berechtigten Interessen erforderlich ist, erfolgt sie auf Basis von Art. 6 Abs. 1 lit. f DSGVO. Ergänzend gelten die einschlägigen Bestimmungen des Bundesdatenschutzgesetzes (BDSG).</p>
       <h2>Speicherdauer</h2>
       <p>Wir speichern personenbezogene Daten nur so lange, wie dies für die genannten Zwecke erforderlich ist oder wie es gesetzliche Aufbewahrungspflichten vorsehen. Danach werden die Daten gelöscht oder gesperrt.</p>
       <h2>Betroffenenrechte</h2>
