Improve help dialog guidance

--- a/index.html
+++ b/index.html
@@ -1482,11 +1482,11 @@
         >
           <h3><span class="help-icon" aria-hidden="true">❓</span>Help Dialog</h3>
           <ul>
-            <li>Open with the <strong>?</strong> button or press <kbd>?</kbd>, <kbd>H</kbd>, <kbd>F1</kbd> or <kbd>Ctrl</kbd>+<kbd>/</kbd> (works even while typing).</li>
-            <li>Use the search field to filter topics; the query resets when closed.</li>
-            <li>Click the × button to clear the search and show all topics again.</li>
-            <li>Press <kbd>/</kbd> or <kbd>Ctrl</kbd>+<kbd>F</kbd> (<kbd>⌘</kbd>+<kbd>F</kbd> on macOS) to jump to the search box.</li>
-            <li>The search also matches common keywords and alternate spellings, so queries like “favourites” still highlight the Favorites tips.</li>
+            <li>Open with the <strong>?</strong> button or press <kbd>?</kbd>, <kbd>H</kbd>, <kbd>F1</kbd> or <kbd>Ctrl</kbd>+<kbd>/</kbd> (<kbd>⌘</kbd>+<kbd>/</kbd> on macOS); shortcuts work even while typing.</li>
+            <li>Type keywords or alternate spellings to filter topics; the search resets automatically whenever you close the dialog.</li>
+            <li>Quick links update as you type—use <kbd>Tab</kbd> or click to focus a link, then press <kbd>Enter</kbd> to scroll to that section.</li>
+            <li>Click the × button to clear the search and show all topics again, or press <kbd>/</kbd> or <kbd>Ctrl</kbd>+<kbd>F</kbd> (<kbd>⌘</kbd>+<kbd>F</kbd> on macOS) to jump back to the search box.</li>
+            <li>The search matches common keywords and alternate spellings, so queries like “favourites” still highlight the Favorites tips.</li>
             <li>Close the dialog with <kbd>Escape</kbd> or by clicking outside.</li>
           </ul>
           <div class="help-link-group" aria-label="Help dialog controls">
